cmake_minimum_required(VERSION 3.24)
project(Assingment3_New)
set(Boost_INCLUDE_DIR c:/mingw/include/)
set(Boost_LIBRARY_DIR c:/mingw/lib/)
find_package(Boost COMPONENTS system filesystem REQUIRED)
include_directories(${Boost_INCLUDE_DIR})
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${CMAKE_SOURCE_DIR}/C:/Users/User/Desktop/CS/SemesterE/SPL/Assingment3 New/boost_1_61_0/")
add_executable(Assingment3_New main.cpp SPL231-Assignment3-student-template-2/client/src/StompClient.cpp SPL231-Assignment3-student-template-2/client/src/ConnectionHandler.cpp SPL231-Assignment3-student-template-2/client/src/StompProtocol.cpp SPL231-Assignment3-student-template-2/client/src/StompClientnew.h SPL231-Assignment3-student-template-2/client/include/Game.h SPL231-Assignment3-student-template-2/client/src/Game.cpp)
